--- a/Babpool/src/main/webapp/resource/css/placeDetail.css
+++ b/Babpool/src/main/webapp/resource/css/placeDetail.css
@@ -18,7 +18,8 @@ html, body {
   max-width: 900px;
   margin: 30px auto;
   background: #fff;
-  padding: 25px;
+  padding: 30px 50px; /*가로세로 여백*/
+  box-sizing: border-box;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
@@ -96,10 +97,22 @@ html, body {
   text-align: left; /* ✅ 왼쪽 정렬로 변경 */
 }
 .like-box {
-  cursor: pointer;
-  font-size: 1.4rem;
-  margin-bottom: 10px;
+    cursor: pointer;
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    border: none;
+    background: none;
+    padding: 0;
+    outline: none;
 }
+
+.like-box:focus,
+.like-box:hover {
+    outline: none;
+    background: none;
+}
+
+
 
 .like-container {
   display: flex;
@@ -172,7 +185,7 @@ html, body {
 .review-average {
   position: absolute;
   top: 50%;
-  right: 0;
+  right: 50px;
   transform: translateY(-50%);
   text-align: center;
   width: 200px;
